maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime6.Escaper
	if (getDirection() == direction.NORD) {
                              ^